# jupyterhub-ai-gateway

./:  .readthedocs.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  environment.yaml  pyproject.toml  requirements-development.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md  release.yaml
.github/issue_template/: bug_report.yaml  feature_request.yaml  improvement_request.yaml
.github/workflows/: development.yaml  production.yaml
docs/: changelog.md  conf.py  index.md  overview.md  usage.md
docs/_static/: docs.html
docs/_static/styles/: custom.css
docs/_templates/: sidebar-icon-links.html
docs/api-reference/: index.md
jupyterhub_ai_gateway/: __init__.py  app.py  cli.py  client.py  constants.py  models.py  security.py  service.py  settings.py  utils.py
jupyterhub_ai_gateway/metrics/: __init__.py  metrics.py  middleware.py
jupyterhub_ai_gateway/routers/: __init__.py  gateway.py  service.py
tests/: __init__.py  conftest.py  test_gateway.py  test_service.py  test_utils.py
tests/data/: test-config.yaml
